20191229 ECF
* update og metadata

20180430 ECF
* Fix php7 function declaration compatibility error

20171123 ECF
 * Fix Image URLS to be fully qualified

20171023 ECF
 * Switch to simple HTML DOM parsing instead of regex/fix failure to match on image

20170111 ECF
 * Cleanup code/factor out into functions
 * Use metadeta from plugin if applicable

20160514 ECF
 * Facebook app_id

20150517 ECF
 * Converted to SEO plugin
 * Add other useful meta tags

20130911 ECF
 * Started plugin