@@ -1,3 +1,7 @@
+20201106 ECF
+* static page support
+* default og image
+
 20191229 ECF
 * update og metadata
 
